# renderer

./: CMakeLists.txt  Circle.cpp  Circle.h  main.cpp  main.h  renderer.cpp  renderer.h  renderer_circle_par.cpp  renderer_plane_par.cpp  renderer_seq.cpp  test.csv  test.h  values.h
auxil/: relation.aux  relation.toc
documentation/: relation.tex
results/: generate_plots.py  test.csv
results/csv/: result-1024-1024.csv  result-256-256.csv  result-512-512.csv
src/: renderer.cpp  renderer.h  test.h  utils.cpp  utils.h
